--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="font-manrope">
-    <header>
+    <header class="container mx-auto">
         <div class="hero ">
             <div class="hero-content flex-col lg:flex-row-reverse">
               <div>
@@ -54,8 +54,48 @@
             </div>
           </div>
     </header>
-    <main>
-
+    <main class="max-w-screen-xl mx-auto">
+        <section class="mt-36 px-4">
+            <div class="text-center space-y-10">
+                <h2 class="text-5xl font-extrabold ">Our Featured Products</h2>
+                <p class="font-medium lg:max-w-screen-lg mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            </div>
+            <!-- Featured Cards section -->
+           <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mt-8">
+             <!-- card-1 -->
+             <div class="card bg-[#F4F4F4] shadow-xl pt-8">
+              <figure><img src="/images/tea-1.png" alt="Shoes" /></figure>
+              <div class="card-body text-center">
+                <h2 class="font-extrabold text-2xl">Milk Tea</h2>
+                <p class="font-semibold">Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+            <!-- card-2 -->
+            <div class="card bg-[#F4F4F4] shadow-xl pt-8">
+              <figure><img src="/images/tea-2.png" alt="Shoes" /></figure>
+              <div class="card-body text-center">
+                <h2 class="font-extrabold text-2xl">Black Tea</h2>
+                <p class="font-semibold">Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+            <!-- card-3 -->
+            <div class="card bg-[#F4F4F4] shadow-xl pt-8">
+              <figure><img src="/images/tea-3.png" alt="Shoes" /></figure>
+              <div class="card-body text-center">
+                <h2 class="font-extrabold text-2xl">Lemon Tea</h2>
+                <p class="font-semibold">Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+            <!-- card-4 -->
+            <div class="card bg-[#F4F4F4] shadow-xl pt-8">
+              <figure><img src="/images/tea-4.png" alt="Shoes" /></figure>
+              <div class="card-body text-center">
+                <h2 class="font-extrabold text-2xl">Green Tea</h2>
+                <p class="font-semibold">Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+           </div>
+        </section>
     </main>
     <footer>
 
