--- a/index.html
+++ b/index.html
@@ -96,6 +96,22 @@
             </div>
            </div>
         </section>
+        <section class="mt-36 mb-32 px-4 flex flex-col lg:flex-row gap-12">
+          <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
+            <div class="bg-gradient-to-r from-[#F00] to-[#FF8938] rounded-xl opacity-10 h-36"></div>
+            <div class="row-span-2 bg-[#E6A623] rounded-xl px-12 py-10 bg-opacity-10 flex justify-center"><img src="./images/fresh-1.png" alt=""></div>
+            <div class="row-span-2 bg-[#577639] rounded-xl px-12 py-10 bg-opacity-10 flex justify-center"><img src="./images/fresh-2.png" alt=""></div>
+            <div class="bg-gradient-to-r from-[#D9D9D9] to-[white] rounded-xl h-36"></div>
+          </div>
+          <div class="flex-1 space-y-8">
+            <h1 class="text-5xl font-extrabold">Great Tea, Freshly Presented</h1>
+            <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+            <h1 class="text-xl font-extrabold">Unique Taste</h1>
+            <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+            <h1 class="text-xl font-extrabold">Premium Quality</h1>
+            <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+          </div>
+        </section>
     </main>
     <footer>
 
