news section added

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           </div>
     </header>
     <main class="max-w-screen-xl mx-auto">
+      <!-- Featured Section -->
         <section class="mt-36 px-4">
             <div class="text-center space-y-10">
                 <h2 class="text-5xl font-extrabold ">Our Featured Products</h2>
@@ -96,7 +97,8 @@
             </div>
            </div>
         </section>
-        <section class="mt-36 mb-32 px-4 flex flex-col lg:flex-row gap-12">
+        <!-- Great Tea Section -->
+        <section class="mt-36 px-4 flex flex-col lg:flex-row gap-12">
           <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
             <div class="bg-gradient-to-r from-[#F00] to-[#FF8938] rounded-xl opacity-10 h-36"></div>
             <div class="row-span-2 bg-[#E6A623] rounded-xl px-12 py-10 bg-opacity-10 flex justify-center"><img src="./images/fresh-1.png" alt=""></div>
@@ -111,6 +113,94 @@
             <h1 class="text-xl font-extrabold">Premium Quality</h1>
             <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
           </div>
+        </section>
+        <!-- Super Clients -->
+        <section class="mt-36 px-4 bg-gradient-to-l from-[#F00] to-[#FF8938] ">
+          <div class="px-16 flex flex-col lg:flex-row gap-14 py-32 items-center">
+            <div class="space-y-5 text-white">
+              <h1 class="font-extrabold text-5xl">Meet Our Super Clients</h1>
+              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+              <button class="btn btn-primary">Show All</button>
+            </div>
+         <div class="relative">
+             <!-- review 1-->
+             <div class="bg-white px-10 py-8 relative rounded-lg opacity-40 mb-12">
+              <img src="./images/client.png" alt="" class="absolute -mt-12 -ml-16 border-4 rounded-full bg-white">
+              <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+              <h1 class="font-semibold">Ilham Yuda</h1>
+              <h1>Businessman</h1>
+             <div class="flex justify-end">
+              <img src="./images/circles.png" alt="">
+             </div>
+            </div>
+             <!-- review 3 -->
+             <div class="bg-white px-10 py-8 relative rounded-lg opacity-40">
+              <img src="./images/client.png" alt="" class="absolute -mt-12 -ml-16 border-4 rounded-full bg-white">
+              <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+              <h1 class="font-semibold">Ilham Yuda</h1>
+              <h1>Businessman</h1>
+             <div class="flex justify-end">
+              <img src="./images/circles.png" alt="">
+             </div>
+            </div>
+            <!-- review 2 -->
+            <div class="bg-white px-10 py-8 rounded-lg absolute bottom-32 lg:-left-16 lg:w-[433px]">
+              <img src="./images/client.png" alt="" class="absolute -mt-12 -ml-16 border-4 rounded-full bg-white">
+              <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+              <h1 class="font-semibold">Ilham Yuda</h1>
+              <h1>Businessman</h1>
+             <div class="flex justify-end">
+              <img src="./images/circles.png" alt="">
+             </div>
+            </div>
+           
+          </div>
+         </div>
+        </section>
+        <!-- News and Events -->
+        <section class="mt-36 px-4">
+          <div class="text-center space-y-10 mb-12">
+            <h2 class="text-5xl font-extrabold ">News & Events</h2>
+            <p class="font-medium lg:max-w-screen-lg mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.  </p>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols2 lg:grid-cols-3 gap-10">
+          <!-- News-1 -->
+          <div class="card rounded-lg border-[#D2D2D2] border-2 pt-5">
+            <figure><img src="./images/news-1.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <h2>Feb 05, 2027</h2>
+              <h2 class="card-title">Collecting 8 points for discount</h2>
+              <p>There are many variations of passages of Lorem Ipsum available.?</p>
+              <div class="card-actions">
+                <button class="btn btn-ghost">Learn More</button>
+              </div>
+            </div>
+          </div>
+          <!-- News-2 -->
+          <div class="card rounded-lg border-[#D2D2D2] border-2 pt-5">
+            <figure><img src="./images/news-2.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <h2>Feb 05, 2027</h2>
+              <h2 class="card-title">Collecting 8 points for discount</h2>
+              <p>There are many variations of passages of Lorem Ipsum available.?</p>
+              <div class="card-actions">
+                <button class="btn btn-ghost">Learn More</button>
+              </div>
+            </div>
+          </div>
+          <!-- News-3 -->
+          <div class="card rounded-lg border-[#D2D2D2] border-2 pt-5">
+            <figure><img src="./images/news-3.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <h2>Feb 05, 2027</h2>
+              <h2 class="card-title">Collecting 8 points for discount</h2>
+              <p>There are many variations of passages of Lorem Ipsum available.?</p>
+              <div class="card-actions">
+                <button class="btn btn-ghost">Learn More</button>
+              </div>
+            </div>
+          </div>
+        </div>
         </section>
     </main>
     <footer>
