--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
           theme: {
             extend: {
               colors: {
-                clifford: '#da373d',
+                'gradient-start': '#FF8938',
+                'gradient-end': '#F00',
               }
             }
           }
@@ -203,8 +204,55 @@
         </div>
         </section>
     </main>
-    <footer>
+    <footer class=" bg-red-300 py-32 mt-36">
+      <div class="flex justify-between px-20">
+        <img src="./images/cup.png" alt="">
+        <div class="flex gap-10">
+          <h1>Ready to get started</h1>
+        <button class="btn btn-primary">Get Started</button>
+        </div>
+      </div>
+      <div class="footer p-10  text-base-content">
 
+        <div>
+          <span class="footer-title">Services</span> 
+          <a class="link link-hover">Branding</a> 
+          <a class="link link-hover">Design</a> 
+          <a class="link link-hover">Marketing</a> 
+          <a class="link link-hover">Advertisement</a>
+        </div> 
+        <div>
+          <span class="footer-title">Company</span> 
+          <a class="link link-hover">About us</a> 
+          <a class="link link-hover">Contact</a> 
+          <a class="link link-hover">Jobs</a> 
+          <a class="link link-hover">Press kit</a>
+        </div> 
+        <div>
+          <span class="footer-title">Legal</span> 
+          <a class="link link-hover">Terms of use</a> 
+          <a class="link link-hover">Privacy policy</a> 
+          <a class="link link-hover">Cookie policy</a>
+        </div> 
+        <div>
+          <span class="footer-title">Newsletter</span> 
+          <div class="form-control w-80">
+            <label class="label">
+              <span class="label-text">Enter your email address</span>
+            </label> 
+            <div class="relative">
+              <input type="text" placeholder="Email Address" class="py-4 bg-transparent border-b-2 border-b-black w-full outline-none" /> 
+              <button class="btn  absolute top-0 right-0 rounded-full bg-gradient-to-r from-[#F00] to-[#FF8938] border-none"><i class="fa-solid fa-circle-chevron-right"></i></button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- copyrite -->
+      <div class="footer footer-center p-4text-base-content">
+        <div>
+          <p>Copyright © 2023 - All right reserved by ACME Industries Ltd</p>
+        </div>
+      </div>
     </footer>
 </body>
 </html>
