--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
            <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mt-8">
              <!-- card-1 -->
              <div class="card bg-[#F4F4F4] shadow-xl pt-8">
-              <figure><img src="/images/tea-1.png" alt="Shoes" /></figure>
+              <figure><img src="./images/tea-1.png" alt="Shoes" /></figure>
               <div class="card-body text-center">
                 <h2 class="font-extrabold text-2xl">Milk Tea</h2>
                 <p class="font-semibold">Creamer could be replaced by fresh milk</p>
@@ -74,7 +74,7 @@
             </div>
             <!-- card-2 -->
             <div class="card bg-[#F4F4F4] shadow-xl pt-8">
-              <figure><img src="/images/tea-2.png" alt="Shoes" /></figure>
+              <figure><img src="./images/tea-2.png" alt="Shoes" /></figure>
               <div class="card-body text-center">
                 <h2 class="font-extrabold text-2xl">Black Tea</h2>
                 <p class="font-semibold">Creamer could be replaced by fresh milk</p>
@@ -82,7 +82,7 @@
             </div>
             <!-- card-3 -->
             <div class="card bg-[#F4F4F4] shadow-xl pt-8">
-              <figure><img src="/images/tea-3.png" alt="Shoes" /></figure>
+              <figure><img src="./images/tea-3.png" alt="Shoes" /></figure>
               <div class="card-body text-center">
                 <h2 class="font-extrabold text-2xl">Lemon Tea</h2>
                 <p class="font-semibold">Creamer could be replaced by fresh milk</p>
@@ -90,7 +90,7 @@
             </div>
             <!-- card-4 -->
             <div class="card bg-[#F4F4F4] shadow-xl pt-8">
-              <figure><img src="/images/tea-4.png" alt="Shoes" /></figure>
+              <figure><img src="./images/tea-4.png" alt="Shoes" /></figure>
               <div class="card-body text-center">
                 <h2 class="font-extrabold text-2xl">Green Tea</h2>
                 <p class="font-semibold">Creamer could be replaced by fresh milk</p>
